--- a/demo.css
+++ b/demo.css
@@ -8,6 +8,11 @@
     font-weight: bold;
 }
 
+.block {
+	border: 0;
+	background: none;
+}
+
 body {
     max-width: 900px;
     width: 90%;
@@ -75,3 +80,16 @@ a, button {
     color: #fff;
 } 
 
+input[type=text] {
+	margin-top: -20px;
+	font-weight: bold;
+	margin-bottom: 20px;
+	width: 100%;
+	text-align: center;
+	-webkit-appearance: none;
+	outline: none;
+	max-width: 350px;
+	padding: 10px;
+	border: 0;
+	border-radius: 10px;
+}
