--- a/scss/_republic.scss
+++ b/scss/_republic.scss
@@ -1,4 +1,3 @@
-@import "dist/_reseter"; // #!! {ISSUE} Needs a cleaning
+@import "dist/_reseter";
 @import "dist/_mixer";
 @import "dist/_grid";
-@import "dist/_brands";
