--- a/scss/_republic.scss
+++ b/scss/_republic.scss
@@ -1,4 +1,8 @@
+$soft: #f8f8f8;
+
 @import "dist/_reseter";
 @import "dist/_mixer";
-@import "dist/_material";
 @import "dist/_grid";
+@import "dist/_elements";
+@import "dist/_material";
+@import "dist/_class";
